Изменил главную страницу

--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -17,7 +17,7 @@ html(lang="ru")
 	body
 		include sections/mixins.pug
 		include sections/menu--mobile
-		#page
+		#page.pages
 			include sections/header.pug
 			include sections/slider.pug
 			include sections/banners.pug
